Do not create recorder on URL request destroy

New DataUseRecorder need not be created in OnURLRequestDestroyed. It is created
only in OnBeforeURLRequest().

Bug: 752952
Change-Id: Iebe0ad54b77de6591e803974ddffc4fc11e88e34
Reviewed-on: https://chromium-review.googlesource.com/638851
Reviewed-by: Tarun Bansal <tbansal@chromium.org>
Commit-Queue: rajendrant <rajendrant@chromium.org>
Cr-Commit-Position: refs/heads/master@{#497887}
Former-commit-id: a39e2860b5092ed4c1ccdadf884896c0bbca569c