chrome/browser/data_use_measurement/chrome_data_use_ascriber.h
@@ -161,6 +161,8 @@ class ChromeDataUseAscriber : public DataUseAscriber {
     DISALLOW_COPY_AND_ASSIGN(MainRenderFrameEntry);
   };
 
+  DataUseRecorderEntry GetDataUseRecorderEntry(net::URLRequest* request);
+
   DataUseRecorderEntry GetOrCreateDataUseRecorderEntry(
       net::URLRequest* request);
 
